--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
 
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"/>
 
+<uses-permission android:name="android.permission.READ_CALL_LOG"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
