--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
-    <action android:name="android.intent.action.VIEW"/>
-    <category android:name="android.intent.category.DEFAULT"/>
-    <category android:name="android.intent.category.BROWSABLE"/>
+<!--    <action android:name="android.intent.action.VIEW"/>-->
+<!--    <category android:name="android.intent.category.DEFAULT"/>-->
+<!--    <category android:name="android.intent.category.BROWSABLE"/>-->
 
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"/>
 
