--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/familyship"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".MypageActivity"/>
+
+        <activity android:name=".StartActivity"></activity>
 
 
         <activity android:name=".DynamicLinkActivity">
