--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
