--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
 
         <activity android:name=".MypageEditActivity"></activity>
+        <activity android:name=".FamilySettingActivity"></activity>
 
 
         <activity android:name=".StartActivity" />
