--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -19,14 +19,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <activity android:name=".FamilySettingActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".FamilySettingActivity"></activity>
+        <activity android:name=".SignUpActivity"></activity>
 
         <activity android:name=".MypageEditActivity"></activity>
         <activity android:name=".MypageActivity"></activity>
