--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -45,7 +45,12 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+    
 
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
