--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -118,4 +118,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
+    implementation 'androidx.work:work-runtime:2.5.0'
+
 }
