--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <!--갤러리 권한-->
     <uses-permission android:name="android.permission.CAMERA"/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
