--- a/MyApplication/build.gradle
+++ b/MyApplication/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.koin_version = '2.1.5'
     ext.kotlin_version = "1.4.32"
     repositories {
         google()
@@ -12,6 +13,10 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+//        classpath 'com.android.tools.build:gradle:3.6.3'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
