--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -3,40 +3,45 @@
     package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
-    <uses-permission android:name="android.permission.READ_CALL_LOG" />
-
-    <!--갤러리 권한-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <!--갤러리 권한-->
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_CALL_LOG" /> <!-- 갤러리 권한 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 갤러리 권한 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--    Location    -->
+    <!--    정확한 위치    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--    대략적인 위치    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
+        <activity android:name=".SearchMap"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".FamilySettingActivity"></activity>
-        <activity android:name=".SignUpActivity"></activity>
-
-        <activity android:name=".MypageEditActivity"></activity>
-        <activity android:name=".MypageActivity"></activity>
-        <activity android:name=".MainPageActivity"></activity>
-
-        <activity android:name=".BoardActivity"></activity>
-
-
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="945b139935b4dd7d948524834b84b539"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".FamilySettingActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".MypageEditActivity" />
+        <activity android:name=".MypageActivity" />
+        <activity android:name=".MainPageActivity" />
+        <activity android:name=".BoardActivity" />
         <activity android:name=".StartActivity" />
         <activity android:name=".DynamicLinkActivity">
             <intent-filter android:autoVerify="true">
@@ -49,21 +54,17 @@
                     android:host="familyship.page.link"
                     android:path="/DynamicLinkActivity"
                     android:scheme="https" />
-
             </intent-filter>
         </activity>
 
-
         <service
             android:name=".MyFirebaseMessagingService"
-            android:exported="true"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-
     </application>
 
 </manifest>
