--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -45,6 +45,23 @@ android {
 }
 
 dependencies {
+    // FCM
+    implementation 'com.google.firebase:firebase-messaging:20.1.7'
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+
+
+
+
+
+    
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
@@ -64,11 +81,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-config-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+//    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-dynamic-links:20.0.0'
@@ -82,15 +99,15 @@ dependencies {
 
     kapt "com.android.databinding:compiler:2.3.2"
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+//    implementation 'androidx.core:core-ktx:1.6.0'
+//    implementation 'androidx.appcompat:appcompat:1.3.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -120,67 +137,8 @@ dependencies {
 
 
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.work:work-runtime:2.5.0'
-
-
-
-    // notification
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.8.1"
-
-
-
-    def work_version = "2.5.0"
-
-    // (Java only)
-    implementation "androidx.work:work-runtime:$work_version"
-
-    // Kotlin + coroutines
-    implementation "androidx.work:work-runtime-ktx:$work_version"
-
-    // optional - RxJava2 support
-    implementation "androidx.work:work-rxjava2:$work_version"
-
-    // optional - GCMNetworkManager support
-    implementation "androidx.work:work-gcm:$work_version"
-
-    // optional - Test helpers
-    androidTestImplementation "androidx.work:work-testing:$work_version"
-
-    // optional - Multiprocess support
-    implementation "androidx.work:work-multiprocess:$work_version"
-
-
-
-
-    // Koin for Kotlin (핵심 옵션)
-    implementation "org.koin:koin-core:$koin_version"
-    // Koin extended & experimental features (핵심 옵션)
-    implementation "org.koin:koin-core-ext:$koin_version"
-
-    // Koin for Unit tests
-    testImplementation "org.koin:koin-test:$koin_version"
-
-    // Koin for Android
-    implementation "org.koin:koin-android:$koin_version"
-    // Koin Android Scope features
-    implementation "org.koin:koin-android-scope:$koin_version"
-    // Koin Android ViewModel features
-    implementation "org.koin:koin-android-viewmodel:$koin_version"
-    // Koin Android Experimental features
-    implementation "org.koin:koin-android-ext:$koin_version"
-
-    // Koin AndroidX Scope features
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    // Koin AndroidX ViewModel features
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    // Koin AndroidX Fragment features
-    implementation "org.koin:koin-androidx-fragment:$koin_version"
-    // Koin AndroidX Experimental features
-    implementation "org.koin:koin-androidx-ext:$koin_version"
 
 }
