--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -11,8 +11,6 @@
     <!--갤러리 권한-->
     <uses-permission android:name="android.permission.CAMERA"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
@@ -22,30 +20,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <activity android:name=".NotificationActivity"
-            android:exported="true"
-            android:enabled="true">
+        <activity android:name=".Notification.Notification">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".FamilySettingActivity"></activity>
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".FamilySet.MainActivity"></activity>
+        <activity android:name=".FamilySet.FamilySettingActivity"></activity>
+        <activity android:name=".LoginRegister.SignUpActivity"></activity>
 
-        <activity android:name=".MypageEditActivity"></activity>
-        <activity android:name=".MypageActivity"></activity>
-        <activity android:name=".MainPageActivity"></activity>
+        <activity android:name=".Mypage.MypageEditActivity"></activity>
+        <activity android:name=".Mypage.MypageActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
 
-        <activity android:name=".BoardActivity"></activity>
-
-<!--        <activity android:name=".NotificationActivity"></activity>-->
+        <activity android:name=".Home_Board.BoardActivity"></activity>
 
 
         <activity android:name=".StartActivity" />
-        <activity android:name=".DynamicLinkActivity">
+        <activity android:name=".FamilySet.DynamicLinkActivity">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -61,13 +54,24 @@
         </activity>
 
 
-        <service
-            android:name=".MyFirebaseMessagingService"
-            android:exported="true"
-            android:enabled="true">
+<!--        <service-->
+<!--            android:name=".MyFirebaseMessagingService"-->
+<!--            android:exported="true"-->
+<!--            android:enabled="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
+
+<!--        <activity android:name=".Notification.Notification"></activity>-->
+
+        <service android:name=".Notification.FirebaseService"
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
+
         </service>
 
 
