--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <!-- 정확한 위치 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 대략적인 위치 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
@@ -22,8 +23,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="945b139935b4dd7d948524834b84b539" />
         <activity android:name=".Notification.Notification">
         </activity>
         <activity android:name=".FamilySet.MainActivity"></activity>
