--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -45,6 +45,9 @@ android {
 }
 
 dependencies {
+    // json to list
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     // FCM
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
 
