--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -45,6 +45,42 @@ android {
 }
 
 dependencies {
+    // location
+    implementation 'com.google.android.gms:play-services-maps:11'
+
+
+
+
+
+    implementation 'gun0912.ted:tedpermission:2.2.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    implementation 'org.permissionsdispatcher:permissionsdispatcher:4.5.0'
+
+
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    implementation 'gun0912.ted:tedpermission:2.2.0'
+
+    // 위치 정보
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+// 구글 지도, MapsActivity 추가 시 자동으로 추가됨
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'org.jetbrains.anko:anko:0.10.5'
+
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+
+
+
+
     // json to list
     implementation 'com.google.code.gson:gson:2.8.5'
 
