--- a/MyApplication/build.gradle
+++ b/MyApplication/build.gradle
@@ -8,6 +8,7 @@ buildscript {
             url 'https://devrepo.kakao.com/nexus/content/groups/public/'
         }
         maven{ url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.2.0'
@@ -16,6 +17,7 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "io.realm:realm-gradle-plugin:7.0.0"
     }
 }
 
